--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,6 @@
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^16.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^16.2.0",
     "react-script": "^2.0.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^1.6.2"
   }
 }
